--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h2 {
   font-size: 1.8em;
   font-weight: 700;
   line-height: 24px;
+  margin-bottom: 15px;
 }
 
 body {
@@ -85,13 +86,20 @@ body {
   color: #35383A;
 }
 
-.wrapper {
-  height: 100%;
-}
-
 .container {
-  width: 1170px;
+  max-width: 1200px;
+  padding: 0 15px;
   margin: 0 auto;
+}
+@media (max-width: 931px) {
+  .container {
+    max-width: 930px;
+  }
+}
+@media (max-width: 690px) {
+  .container {
+    max-width: 510px;
+  }
 }
 
 .header {
@@ -101,12 +109,22 @@ body {
   align-items: center;
   margin-top: 37px;
 }
+@media (max-width: 690px) {
+  .header_logo-image {
+    width: 180px;
+  }
+}
 .header_cart {
   position: relative;
   text-align: center;
-  font-weight: 600;
   height: 30px;
-  min-width: 142px;
+  font-weight: 600;
+  width: 142px;
+}
+@media (max-Width: 511px) {
+  .header_cart {
+    width: 49px;
+  }
 }
 .header_cart::before {
   position: absolute;
@@ -116,13 +134,21 @@ body {
   width: 28px;
   height: 23px;
   background: no-repeat url(/src/icon/cart.svg);
-  z-index: -10;
 }
 .header_cart a {
   width: 100%;
   height: 100%;
   display: inline-block;
   padding-top: 5px;
+}
+.header_cart span {
+  display: inline-block;
+}
+@media (max-Width: 511px) {
+  .header_cart span {
+    color: #fff;
+    opacity: 0;
+  }
 }
 .header_cart:hover {
   color: #00A82D;
@@ -148,10 +174,22 @@ body {
   grid-row-gap: 40px;
   grid-column-gap: 30px;
 }
+@media (max-width: 991px) {
+  .catalog_items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 691PX) {
+  .catalog_items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .item {
-  width: 270px;
+  max-width: 270px;
   height: 380px;
   padding: 10px 10px 35px;
+  margin: 0 auto;
   box-sizing: border-box;
   border: 1px solid #DEDEDE;
   display: flex;
@@ -159,12 +197,44 @@ body {
   align-items: center;
   cursor: pointer;
 }
+@media (max-width: 691px) {
+  .item {
+    max-width: 450px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    padding: 20px 25px;
+  }
+}
+@media (max-width: 511px) {
+  .item {
+    padding: 10px 10px 35px;
+  }
+}
 .item_image {
   margin-bottom: auto;
+  max-width: 200px;
+  max-height: 200px;
+}
+.item_image img {
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 691px) {
+  .item_image {
+    max-width: 400px;
+    max-height: 400px;
+  }
+}
+@media (max-width: 511px) {
+  .item_image {
+    margin-bottom: 15px;
+  }
 }
 .item_name {
   text-align: center;
   margin-bottom: 15px;
+  font-weight: 500;
 }
 .item_btn {
   background-color: #296DC1;
@@ -175,6 +245,11 @@ body {
   color: #fff;
   line-height: 16px;
   transition: height 0.3s linear;
+}
+@media (max-width: 690px) {
+  .item_btn {
+    height: 40px;
+  }
 }
 .item:hover {
   padding: 10px 20px 10px;
@@ -194,19 +269,29 @@ body {
 .form {
   background-color: #F2F5F9;
   padding: 70px 0 76px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+  text-align: center;
 }
 .form_title {
   margin-bottom: 30px;
 }
+.form_body {
+  display: inline-block;
+  width: 430px;
+  margin: 0 auto;
+}
+@media (max-width: 511px) {
+  .form_body {
+    width: 290px;
+  }
+}
 .form_item {
   margin-bottom: 30px;
+  max-width: 100%;
 }
 .form_input {
   height: 60px;
-  width: 430px;
+  width: 100%;
   padding: 0 25px;
   box-sizing: border-box;
   font-size: 1.6em;
@@ -215,7 +300,7 @@ body {
 }
 .form_button {
   height: 60px;
-  width: 430px;
+  width: 100%;
   background-color: #296DC1;
   color: #fff;
   font-weight: 600;
