--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,7 @@ h2 {
     font-size: 1.8em;
     font-weight: 700;
     line-height: 24px;
+    margin-bottom: 15px;
 }
 // Main====================
 
@@ -28,16 +29,16 @@ body {
     font-family: Montserrat;
     color: #35383A;
 }
-.wrapper {
-    height: 100%;
-}
-
 .container {
-    width: 1170px;
+    max-width: 1200px;
+    padding: 0 15px;
     margin: 0 auto;
-}
-main {
-
+    @media (max-width: 931px) {
+        max-width: 930px;
+    }
+    @media (max-width: 690px) {
+        max-width: 510px;
+    }
 }
 
 // Header======================
@@ -53,14 +54,20 @@ margin-top: 37px;
     &_logo {
 
         &-image {
+            @media (max-width: 690px) {
+                width: 180px;
+            }
     }
 }
     &_cart {
         position: relative;
         text-align: center;
-        font-weight: 600;
         height: 30px;
-        min-width: 142px;
+        font-weight: 600;
+        width: 142px;
+        @media (max-Width:511px) {
+            width: 49px;
+        }
         &::before {
             position: absolute;
             content: "";
@@ -69,13 +76,20 @@ margin-top: 37px;
             width: 28px;
             height: 23px;
             background: no-repeat url(/src/icon/cart.svg);
-            z-index: -10;
+            // z-index: -10;
         }
         & a {
             width: 100%;
             height: 100%;
             display: inline-block;
             padding-top: 5px;
+        }
+        & span {
+            display: inline-block;
+            @media (max-Width:511px) {
+                color: #fff;
+                opacity: 0; 
+            }
         }
     }
     &_cart:hover{
@@ -99,20 +113,35 @@ margin-top: 37px;
     }
     &_items {
         width: 100%;
+
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-row-gap: 40px;
         grid-column-gap: 30px;
-    }
-    &_item {
+        @media (max-width:991px) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+        @media (max-width:691PX) {
+            grid-template-columns: repeat(1, 1fr);
+        }
+        
     }
 }
 .item {
-    width: 270px;
+    max-width: 270px;
     height: 380px;
     padding: 10px 10px 35px;
+    margin: 0 auto;
     box-sizing: border-box;
     border: 1px solid #DEDEDE;
+    @media (max-width:691px) {
+        max-width: 450px;
+        height: fit-content;
+        padding: 20px 25px;
+    }
+    @media (max-width:511px) {
+        padding: 10px 10px 35px;
+    }
 
     display: flex;
     flex-direction: column;
@@ -122,12 +151,24 @@ margin-top: 37px;
 
     &_image {
         margin-bottom: auto;
+        max-width: 200px;
+        max-height: 200px;
+        & img {
+            width: 100%;
+            height: 100%;
+        }
+        @media (max-width:691px) {
+            max-width: 400px;
+            max-height: 400px;
+        }
+        @media (max-width:511px) {
+            margin-bottom: 15px;
+        }
     }
     &_name {
         text-align: center;
         margin-bottom: 15px;
-    }
-    &_cost {
+        font-weight: 500;
     }
     &_btn {
         background-color: #296DC1;
@@ -140,6 +181,10 @@ margin-top: 37px;
         line-height: 16px;
         
         transition: height 0.3s linear;
+        @media (max-width: 690px) {
+            
+        height: 40px;
+        }
     }
 
     &:hover{
@@ -165,32 +210,39 @@ margin-top: 37px;
 .form {
     background-color: #F2F5F9;
     padding: 70px 0 76px;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100%;
+    text-align: center;
     &_title {
         margin-bottom: 30px;
     }
     &_body {
+        display: inline-block;
+        width: 430px;
+        margin: 0 auto;
+        @media (max-width:511px) {
+            width: 290px;
+        }
     }
     &_item {
         margin-bottom: 30px;
+        max-width: 100%;
     }
     &_input {
         height: 60px;
-        width: 430px;
+        width: 100%;
         padding: 0 25px;
         box-sizing: border-box;
+
         font-size: 1.6em;
         line-height: 20px;
         font-weight: 500;
     }
     &_button {
         height: 60px;
-        width: 430px;
+        width: 100%;
         background-color: #296DC1;
         color: #fff;
+
         font-weight: 600;
         font-size: 1.2em;
         line-height: 16px;
