--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,9 @@ body {
         max-width: 510px;
     }
 }
+.hide {
+    // display: none;
+}
 
 // Header======================
 .header {
@@ -66,8 +69,28 @@ margin-top: 37px;
         height: 30px;
         font-weight: 600;
         width: 142px;
+
         @media (max-Width:511px) {
             width: 49px;
+        }
+
+        &-total{
+            display: inline-block;
+            background-color: #00A82D;
+            width: 21px;
+            height: 21px;
+            padding-top: 2px;
+            border-radius: 50%;
+            position: absolute;
+            top: 3px;
+            right: 5px;
+
+            font-size: 12px;
+            text-align: center;
+            color: #fff;
+            @media (max-Width:511px) {
+                right: -5px;
+            }
         }
         &::before {
             position: absolute;
@@ -182,9 +205,8 @@ margin-top: 37px;
         line-height: 16px;
         
         transition: height 0.3s linear;
-        @media (max-width: 690px) {
-            
-        height: 40px;
+        @media (max-width: 690px) {            
+            height: 40px;
         }
         
     }
@@ -192,7 +214,7 @@ margin-top: 37px;
         margin-bottom: 15px;
     }
     &:hover{
-        padding: 10px 20px 10px;
+        padding: 10px 10px 10px;
     }
 
     &:hover button{
@@ -287,25 +309,32 @@ margin-top: 37px;
         }
     }
     &_remove {
-        cursor: pointer;
 
         &-icon{
-        width: 30px;
-        height: 30px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        @media (max-width: 931px) {
-            margin: 0;
-        }
-        @media (max-width: 691px) {
-            display: none;
-        }
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            & img {
+                z-index: -10;
+            }
+
+            @media (max-width: 931px) {
+                margin: 0;
+            }
+            @media (max-width: 691px) {
+                display: none;
+            }
         }
         &-btn {
             display: none;
+            & img {
+                z-index: -15;
+            }
             @media (max-width: 691px) {
-                display: inline-block;
+                display: flex;
             }
         }
     }
